<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sofe4640.johnhowe.mortgagecalculator.SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mortgage_monthly_payment_amount" />

            <TextView
                android:id="@+id/MortgagePaymentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/null_text"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mortgage_principal_amount" />

            <TextView
                android:id="@+id/PrincipalView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/null_text"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/interest_rate" />

            <TextView
                android:id="@+id/InterestView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/null_text"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mortgage_principal_amount" />

            <TextView
                android:id="@+id/AmortizationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/null_text"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>